# web3-copilot

./: README.md  apply_patch.py  code.py  openai_patch.diff  pyproject.toml
copilot/: async_util.py  config.py  greet.py  greet.test.py  pipeline.py  pipeline.test.py  test
copilot/data/: Contract.csv  contract.csv  erc20.csv  loader.py  loader.test.py  protocol.csv  protocols.yaml
copilot/method_search_engine/: .gitattributes  embedding_generator.py  engine.py  engine.test.py  index.json  query_template.txt  steps_input.yaml  test
copilot/program_generator/: generated.py  pgt_swap_transfer.txt  program.py  program_swap_transfer.py  steps_template.txt
copilot/summarizer/: summarizer.py
copilot/task_interpreter/: data.json  index.py  interpreter-input-template.txt  task_interpreter.py  task_interpreter.test.py
docs/: move_to_trash.sh
docs/aave-docs-v2/: README.md  SUMMARY.md  change-from-v1-to-v2.md  glossary.md
docs/aave-docs-v3/: README.md  SUMMARY.md  protocol-feature-summary.md
docs/curve-docs/: dao-fees.rst  dao-gauges-sidechain.rst  dao-gauges.rst  dao-overview.rst  dao-ownership.rst  dao-vecrv.rst  dao-voting.rst  exchange-cross-asset-swaps.rst  exchange-deposits.rst  exchange-lp-tokens.rst  exchange-overview.rst  exchange-pools.rst  factory-deployer.rst  (+18 more)
prompt/: greet.py  pipeline.py  progam_swap_ETHUSDC.py  program.py  pyproject.toml  requirements.txt
prompt/summarizer/: summarizer-input-template.txt
prompt/task-interpreter/: example-input.json  interpreter-input-template.txt  task-interpreter.py  task-interpreter.test.py  user-content-template.txt
prompt/task_interpreter/: interpreter-input-template.txt  task_interpreter.py
scripts/: proxy_check.py
(+94 files in other folders)
