[tool.poetry]
name = "auto3-copilot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "prompt"}]

[tool.poetry.scripts]
greet = "prompt.greet:greet"

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.5.9"
arrow = "^1.2.3"
click = "^8.1.3"
pyyaml = "^6.0"
promptlayer = "^0.1.80"
jinja2 = "^3.1.2"
pandas = "^2.0.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
