[tool.poetry]
name = "auto3-copilot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "copilot"}]

[tool.poetry.scripts]
copilot = "copilot.greet:run"

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.5.9"
arrow = "^1.2.3"
click = "^8.1.3"
pyyaml = "^6.0"
promptlayer = "^0.1.80"
jinja2 = "^3.1.2"
pandas = "^2.0.0"
langchain = "0.0.134"
nest-asyncio = "^1.5.6"
web3 = "^6.1.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
unidiff = "^0.7.5"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
