[tool.poetry]
name = "auto3-copilot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "auto3_copilot"}]

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.5.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
